ANTLR/teamplusplusParser.py
# Generated from teamplusplus.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class teamplusplusParser ( Parser ):

    grammarFileName = "teamplusplus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'variables'", "'si'", 
                     "'entonces'", "'sino'", "<INVALID>", "'='", "'!='", 
                     "'>'", "'<'", "'=='", "'&'", "'|'", "'('", "')'", "'{'", 
                     "'}'", "'lee'", "'escribe'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "','", "';'", "':'", "'['", "']'", 
                     "'entero'", "'floatante'", "'char'", "'principal'", 
                     "'%%'", "'atributos'", "'hereda'", "'metodos'", "'clase'", 
                     "'funcion'", "'void'", "'regresa'", "'mientras'", "'hasta'", 
                     "'hacer'", "'desde'" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA", "STRING", "ID", "PLUS", "MINUS", 
                      "TIMES", "DIV", "VARIABLES", "IF", "THEN", "ELSE", 
                      "WHITESPACE", "EQUAL", "DIFF", "GREATER", "SMALLER", 
                      "IS_EQUAL", "AND", "OR", "LP", "RP", "LCB", "RCB", 
                      "READ", "PRINT", "CTEC", "CTEI", "CTEF", "POINT", 
                      "COMMA", "SEMICOLON", "COLON", "LSB", "RSB", "INT", 
                      "FLOAT", "CHAR", "PRINCIPAL", "COMMENT", "ATRIBUTOS", 
                      "HEREDA", "METODOS", "CLASE", "FUNCION", "VOID", "RETURN", 
                      "MIENTRAS", "HASTA", "HACER", "DESDE" ]

    RULE_programa = 0
    RULE_comentario = 1
    RULE_programaAux = 2
    RULE_dec_vars = 3
    RULE_form_vars = 4
    RULE_form_vars_aux = 5
    RULE_clases = 6
    RULE_funciones = 7
    RULE_tipo = 8
    RULE_tipo_simple = 9
    RULE_tipo_retorno = 10
    RULE_parametros = 11
    RULE_tipo_compuesto = 12
    RULE_var = 13
    RULE_asign_vars = 14
    RULE_llamada_fun = 15
    RULE_retorno_fun = 16
    RULE_lectura = 17
    RULE_lecturaaux = 18
    RULE_escritura = 19
    RULE_escrituraAux = 20
    RULE_decision = 21
    RULE_estatutosAux = 22
    RULE_rep_condicional = 23
    RULE_rep_no_condicional = 24
    RULE_estatutos = 25
    RULE_exp = 26
    RULE_m_exp = 27
    RULE_t = 28
    RULE_f = 29

    ruleNames =  [ "programa", "comentario", "programaAux", "dec_vars", 
                   "form_vars", "form_vars_aux", "clases", "funciones", 
                   "tipo", "tipo_simple", "tipo_retorno", "parametros", 
                   "tipo_compuesto", "var", "asign_vars", "llamada_fun", 
                   "retorno_fun", "lectura", "lecturaaux", "escritura", 
                   "escrituraAux", "decision", "estatutosAux", "rep_condicional", 
                   "rep_no_condicional", "estatutos", "exp", "m_exp", "t", 
                   "f" ]

    EOF = Token.EOF
    PROGRAMA=1
    STRING=2
    ID=3
    PLUS=4
    MINUS=5
    TIMES=6
    DIV=7
    VARIABLES=8
    IF=9
    THEN=10
    ELSE=11
    WHITESPACE=12
    EQUAL=13
    DIFF=14
    GREATER=15
    SMALLER=16
    IS_EQUAL=17
    AND=18
    OR=19
    LP=20
    RP=21
    LCB=22
    RCB=23
    READ=24
    PRINT=25
    CTEC=26
    CTEI=27
    CTEF=28
    POINT=29
    COMMA=30
    SEMICOLON=31
    COLON=32
    LSB=33
    RSB=34
    INT=35
    FLOAT=36
    CHAR=37
    PRINCIPAL=38
    COMMENT=39
    ATRIBUTOS=40
    HEREDA=41
    METODOS=42
    CLASE=43
    FUNCION=44
    VOID=45
    RETURN=46
    MIENTRAS=47
    HASTA=48
    HACER=49
    DESDE=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(teamplusplusParser.PROGRAMA, 0)

        def ID(self):
            return self.getToken(teamplusplusParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(teamplusplusParser.SEMICOLON, 0)

        def programaAux(self):
            return self.getTypedRuleContext(teamplusplusParser.ProgramaAuxContext,0)


        def PRINCIPAL(self):
            return self.getToken(teamplusplusParser.PRINCIPAL, 0)

        def LP(self):
            return self.getToken(teamplusplusParser.LP, 0)

        def RP(self):
            return self.getToken(teamplusplusParser.RP, 0)

        def LCB(self):
            return self.getToken(teamplusplusParser.LCB, 0)

        def estatutos(self):
            return self.getTypedRuleContext(teamplusplusParser.EstatutosContext,0)


        def RCB(self):
            return self.getToken(teamplusplusParser.RCB, 0)

        def comentario(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(teamplusplusParser.ComentarioContext)
            else:
                return self.getTypedRuleContext(teamplusplusParser.ComentarioContext,i)


        def getRuleIndex(self):
            return teamplusplusParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = teamplusplusParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(teamplusplusParser.PROGRAMA)
                self.state = 61
                self.match(teamplusplusParser.ID)
                self.state = 62
                self.match(teamplusplusParser.SEMICOLON)
                self.state = 63
                self.programaAux()
                self.state = 64
                self.match(teamplusplusParser.PRINCIPAL)
                self.state = 65
                self.match(teamplusplusParser.LP)
                self.state = 66
                self.match(teamplusplusParser.RP)
                self.state = 67
                self.match(teamplusplusParser.LCB)
                self.state = 68
                self.estatutos()
                self.state = 69
                self.match(teamplusplusParser.RCB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.comentario()
                self.state = 72
                self.match(teamplusplusParser.PROGRAMA)
                self.state = 73
                self.match(teamplusplusParser.ID)
                self.state = 74
                self.match(teamplusplusParser.SEMICOLON)
                self.state = 75
                self.programaAux()
                self.state = 76
                self.comentario()
                self.state = 77
                self.match(teamplusplusParser.PRINCIPAL)
                self.state = 78
                self.match(teamplusplusParser.LP)
                self.state = 79
                self.match(teamplusplusParser.RP)
                self.state = 80
                self.match(teamplusplusParser.LCB)
                self.state = 81
                self.estatutos()
                self.state = 82
                self.match(teamplusplusParser.RCB)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.comentario()
                self.state = 85
                self.match(teamplusplusParser.PROGRAMA)
                self.state = 86
                self.match(teamplusplusParser.ID)
                self.state = 87
                self.match(teamplusplusParser.SEMICOLON)
                self.state = 88
                self.programaAux()
                self.state = 89
                self.match(teamplusplusParser.PRINCIPAL)
                self.state = 90
                self.match(teamplusplusParser.LP)
                self.state = 91
                self.match(teamplusplusParser.RP)
                self.state = 92
                self.match(teamplusplusParser.LCB)
                self.state = 93
                self.estatutos()
                self.state = 94
                self.match(teamplusplusParser.RCB)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(teamplusplusParser.PROGRAMA)
                self.state = 97
                self.match(teamplusplusParser.ID)
                self.state = 98
                self.match(teamplusplusParser.SEMICOLON)
                self.state = 99
                self.programaAux()
                self.state = 100
                self.comentario()
                self.state = 101
                self.match(teamplusplusParser.PRINCIPAL)
                self.state = 102
                self.match(teamplusplusParser.LP)
                self.state = 103
                self.match(teamplusplusParser.RP)
                self.state = 104
                self.match(teamplusplusParser.LCB)
                self.state = 105
                self.estatutos()
                self.state = 106
                self.match(teamplusplusParser.RCB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComentarioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(teamplusplusParser.COMMENT)
            else:
                return self.getToken(teamplusplusParser.COMMENT, i)

        def STRING(self):
            return self.getToken(teamplusplusParser.STRING, 0)

        def getRuleIndex(self):
            return teamplusplusParser.RULE_comentario

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComentario" ):
                listener.enterComentario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComentario" ):
                listener.exitComentario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComentario" ):
                return visitor.visitComentario(self)
            else:
                return visitor.visitChildren(self)




    def comentario(self):

        localctx = teamplusplusParser.ComentarioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comentario)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(teamplusplusParser.COMMENT)
            self.state = 111
            self.match(teamplusplusParser.STRING)
            self.state = 112
            self.match(teamplusplusParser.COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaAuxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clases(self):
            return self.getTypedRuleContext(teamplusplusParser.ClasesContext,0)


        def dec_vars(self):
            return self.getTypedRuleContext(teamplusplusParser.Dec_varsContext,0)


        def funciones(self):
            return self.getTypedRuleContext(teamplusplusParser.FuncionesContext,0)


        def getRuleIndex(self):
            return teamplusplusParser.RULE_programaAux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramaAux" ):
                listener.enterProgramaAux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramaAux" ):
                listener.exitProgramaAux(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramaAux" ):
                return visitor.visitProgramaAux(self)
            else:
                return visitor.visitChildren(self)




    def programaAux(self):

        localctx = teamplusplusParser.ProgramaAuxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programaAux)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.clases()
                self.state = 115
                self.dec_vars()
                self.state = 116
                self.funciones()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.clases()
                self.state = 119
                self.funciones()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.clases()
                self.state = 122
                self.dec_vars()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.dec_vars()
                self.state = 125
                self.funciones()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.clases()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 128
                self.dec_vars()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 129
                self.funciones()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Dec_varsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLES(self):
            return self.getToken(teamplusplusParser.VARIABLES, 0)

        def form_vars(self):
            return self.getTypedRuleContext(teamplusplusParser.Form_varsContext,0)


        def comentario(self):
            return self.getTypedRuleContext(teamplusplusParser.ComentarioContext,0)


        def getRuleIndex(self):
            return teamplusplusParser.RULE_dec_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec_vars" ):
                listener.enterDec_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec_vars" ):
                listener.exitDec_vars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDec_vars" ):
                return visitor.visitDec_vars(self)
            else:
                return visitor.visitChildren(self)




    def dec_vars(self):

        localctx = teamplusplusParser.Dec_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dec_vars)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [teamplusplusParser.VARIABLES]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(teamplusplusParser.VARIABLES)
                self.state = 133
                self.form_vars()
                pass
            elif token in [teamplusplusParser.COMMENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.comentario()
                self.state = 135
                self.match(teamplusplusParser.VARIABLES)
                self.state = 136
                self.form_vars()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Form_varsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(teamplusplusParser.ID, 0)

        def COLON(self):
            return self.getToken(teamplusplusParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(teamplusplusParser.TipoContext,0)


        def SEMICOLON(self):
            return self.getToken(teamplusplusParser.SEMICOLON, 0)

        def form_vars_aux(self):
            return self.getTypedRuleContext(teamplusplusParser.Form_vars_auxContext,0)


        def comentario(self):
            return self.getTypedRuleContext(teamplusplusParser.ComentarioContext,0)


        def getRuleIndex(self):
            return teamplusplusParser.RULE_form_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForm_vars" ):
                listener.enterForm_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForm_vars" ):
                listener.exitForm_vars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForm_vars" ):
                return visitor.visitForm_vars(self)
            else:
                return visitor.visitChildren(self)




    def form_vars(self):

        localctx = teamplusplusParser.Form_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_form_vars)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(teamplusplusParser.ID)
                self.state = 141
                self.match(teamplusplusParser.COLON)
                self.state = 142
                self.tipo()
                self.state = 143
                self.match(teamplusplusParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(teamplusplusParser.ID)
                self.state = 146
                self.form_vars_aux()
                self.state = 147
                self.match(teamplusplusParser.COLON)
                self.state = 148
                self.tipo()
                self.state = 149
                self.match(teamplusplusParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.match(teamplusplusParser.ID)
                self.state = 152
                self.form_vars_aux()
                self.state = 153
                self.match(teamplusplusParser.COLON)
                self.state = 154
                self.tipo()
                self.state = 155
                self.match(teamplusplusParser.SEMICOLON)
                self.state = 156
                self.comentario()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Form_vars_auxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(teamplusplusParser.COMMA, 0)

        def dec_vars(self):
            return self.getTypedRuleContext(teamplusplusParser.Dec_varsContext,0)


        def LSB(self):
            return self.getToken(teamplusplusParser.LSB, 0)

        def CTEI(self, i:int=None):
            if i is None:
                return self.getTokens(teamplusplusParser.CTEI)
            else:
                return self.getToken(teamplusplusParser.CTEI, i)

        def RSB(self):
            return self.getToken(teamplusplusParser.RSB, 0)

        def getRuleIndex(self):
            return teamplusplusParser.RULE_form_vars_aux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForm_vars_aux" ):
                listener.enterForm_vars_aux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForm_vars_aux" ):
                listener.exitForm_vars_aux(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForm_vars_aux" ):
                return visitor.visitForm_vars_aux(self)
            else:
                return visitor.visitChildren(self)




    def form_vars_aux(self):

        localctx = teamplusplusParser.Form_vars_auxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_form_vars_aux)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(teamplusplusParser.COMMA)
                self.state = 161
                self.dec_vars()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(teamplusplusParser.LSB)
                self.state = 163
                self.match(teamplusplusParser.CTEI)
                self.state = 164
                self.match(teamplusplusParser.RSB)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 165
                self.match(teamplusplusParser.LSB)
                self.state = 166
                self.match(teamplusplusParser.CTEI)
                self.state = 167
                self.match(teamplusplusParser.COMMA)
                self.state = 168
                self.match(teamplusplusParser.CTEI)
                self.state = 169
                self.match(teamplusplusParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClasesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASE(self):
            return self.getToken(teamplusplusParser.CLASE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(teamplusplusParser.ID)
            else:
                return self.getToken(teamplusplusParser.ID, i)

        def LCB(self):
            return self.getToken(teamplusplusParser.LCB, 0)

        def RCB(self):
            return self.getToken(teamplusplusParser.RCB, 0)

        def SEMICOLON(self):
            return self.getToken(teamplusplusParser.SEMICOLON, 0)

        def ATRIBUTOS(self):
            return self.getToken(teamplusplusParser.ATRIBUTOS, 0)

        def form_vars(self):
            return self.getTypedRuleContext(teamplusplusParser.Form_varsContext,0)


        def METODOS(self):
            return self.getToken(teamplusplusParser.METODOS, 0)

        def funciones(self):
            return self.getTypedRuleContext(teamplusplusParser.FuncionesContext,0)


        def SMALLER(self):
            return self.getToken(teamplusplusParser.SMALLER, 0)

        def HEREDA(self):
            return self.getToken(teamplusplusParser.HEREDA, 0)

        def GREATER(self):
            return self.getToken(teamplusplusParser.GREATER, 0)

        def comentario(self):
            return self.getTypedRuleContext(teamplusplusParser.ComentarioContext,0)


        def getRuleIndex(self):
            return teamplusplusParser.RULE_clases

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClases" ):
                listener.enterClases(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClases" ):
                listener.exitClases(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClases" ):
                return visitor.visitClases(self)
            else:
                return visitor.visitChildren(self)




    def clases(self):

        localctx = teamplusplusParser.ClasesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_clases)
        try:
            self.state = 338
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.match(teamplusplusParser.CLASE)
                self.state = 173
                self.match(teamplusplusParser.ID)
                self.state = 174
                self.match(teamplusplusParser.LCB)
                self.state = 175
                self.match(teamplusplusParser.RCB)
                self.state = 176
                self.match(teamplusplusParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.match(teamplusplusParser.CLASE)
                self.state = 178
                self.match(teamplusplusParser.ID)
                self.state = 179
                self.match(teamplusplusParser.LCB)
                self.state = 180
                self.match(teamplusplusParser.ATRIBUTOS)
                self.state = 181
                self.form_vars()
                self.state = 182
                self.match(teamplusplusParser.RCB)
                self.state = 183
                self.match(teamplusplusParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.match(teamplusplusParser.CLASE)
                self.state = 186
                self.match(teamplusplusParser.ID)
                self.state = 187
                self.match(teamplusplusParser.LCB)
                self.state = 188
                self.match(teamplusplusParser.METODOS)
                self.state = 189
                self.funciones()
                self.state = 190
                self.match(teamplusplusParser.RCB)
                self.state = 191
                self.match(teamplusplusParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 193
                self.match(teamplusplusParser.CLASE)
                self.state = 194
                self.match(teamplusplusParser.ID)
                self.state = 195
                self.match(teamplusplusParser.LCB)
                self.state = 196
                self.match(teamplusplusParser.ATRIBUTOS)
                self.state = 197
                self.form_vars()
                self.state = 198
                self.match(teamplusplusParser.METODOS)
                self.state = 199
                self.funciones()
                self.state = 200
                self.match(teamplusplusParser.RCB)
                self.state = 201
                self.match(teamplusplusParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 203
                self.match(teamplusplusParser.CLASE)
                self.state = 204
                self.match(teamplusplusParser.ID)
                self.state = 205
                self.match(teamplusplusParser.SMALLER)
                self.state = 206
                self.match(teamplusplusParser.HEREDA)
                self.state = 207
                self.match(teamplusplusParser.ID)
                self.state = 208
                self.match(teamplusplusParser.GREATER)
                self.state = 209
                self.match(teamplusplusParser.LCB)
                self.state = 210
                self.match(teamplusplusParser.RCB)
                self.state = 211
                self.match(teamplusplusParser.SEMICOLON)
                pass
